# python-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
scripts/analysis/: rebuild_analysis.sh
scripts/devops/: black.sh  mypy.sh
